@@ -1,3 +1,4 @@
+- add some missing methods, allows to do urpmf --qf '%sourcerpm:%requires'
 - update bash completion
 
 Version 7.31 - 24 January 2014
